--- a/habigisu/habigisu/habigisu.csproj
+++ b/habigisu/habigisu/habigisu.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmOrderstockManegement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmOrderstockManegement.Designer.cs">
+      <DependentUpon>frmOrderstockManegement.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPassChange.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmOrderstockManegement.resx">
+      <DependentUpon>frmOrderstockManegement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPassChange.resx">
       <DependentUpon>frmPassChange.cs</DependentUpon>
     </EmbeddedResource>
